# desktopSlideshow

./: .gitignore  README.md  paths.py  pyproject.toml  randomDeer.py
